--- a/yaml/email-deployment.yaml
+++ b/yaml/email-deployment.yaml
@@ -1,3 +1,4 @@
+---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -12,22 +13,22 @@ spec:
         app: emailservice
     spec:
       terminationGracePeriodSeconds: 5
-      containers:
+    containers:
       - name: server
         image: gcr.io/google-samples/microservices-demo/emailservice:v0.2.0
         ports:
-        - containerPort: 8080
+          - containerPort: 8080
         env:
-        - name: PORT
-          value: "8080"
+          - name: PORT
+            value: "8080"
         # - name: DISABLE_TRACING
         #   value: "1"
-        # - name: DISABLE_PROFILER
-        #   value: "1"
+          - name: DISABLE_PROFILER
+            value: "1"
         readinessProbe:
           periodSeconds: 5
           exec:
-             command: ["/bin/grpc_health_probe", "-addr=:8080"]
+            command: ["/bin/grpc_health_probe", "-addr=:8080"]
         livenessProbe:
           periodSeconds: 5
           exec:
@@ -37,5 +38,5 @@ spec:
             cpu: 100m
             memory: 64Mi
             limits:
-                cpu: 200m
-                memory: 128Mi
+              cpu: 200m
+              memory: 128Mi
