--- a/yaml/recommendationservice-deployment.yaml
+++ b/yaml/recommendationservice-deployment.yaml
@@ -1,3 +1,4 @@
+---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -13,33 +14,34 @@ spec:
     spec:
       terminationGracePeriodSeconds: 5
       containers:
-      - name: server
-        image: gcr.io/google-samples/microservices-demo/recommendationservice:v0.2.0
-        ports:
-        - containerPort: 8080
-        readinessProbe:
-          periodSeconds: 5
-          exec:
+        - name: server
+          image:
+            - gcr.io/google-samples/microservices-demo/recommendationservice:v0.2.0
+          ports:
+            - containerPort: 8080
+          readinessProbe:
+            periodSeconds: 5
+            exec:
             command: ["/bin/grpc_health_probe", "-addr=:8080"]
-        livenessProbe:
-          periodSeconds: 5
-          exec:
+          livenessProbe:
+            periodSeconds: 5
+            exec:
             command: ["/bin/grpc_health_probe", "-addr=:8080"]
-        env:
+          env:
         # - name: PORT
         #   value: "8080"
-        - name: PRODUCT_CATALOG_SERVICE_ADDR
-          value: "productcatalogservice:3550"
+            - name: PRODUCT_CATALOG_SERVICE_ADDR
+              value: "productcatalogservice:3550"
         # - name: DISABLE_TRACING
         #   value: "1"
         # - name: DISABLE_PROFILER
         #   value: "1"
         # - name: DISABLE_DEBUGGER
         #   value: "1"
-            resources:
-            requests:
+              resources:
+                requests:
                 cpu: 100m
                 memory: 220Mi
-            limits:
+              limits:
                 cpu: 200m
                 memory: 450Mi
